--- a/frontend/src/components/styles/home.css
+++ b/frontend/src/components/styles/home.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   margin:0px;
   padding: 0px;
 }
@@ -24,4 +24,76 @@
     margin-top: 20px;
     font-size: 24px;
     color: black;
+  } */
+  *{
+    margin: 0px;
+    padding: 0px;
+
+  }
+  .homeWrap {
+    background-color: #f0f0f0;
+  padding: 20px;
+  text-align: center;
+  font-family: sans-serif;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 600px;
+  height: 300px;
+  margin: 0 auto;
+  }
+  
+  .title {
+    font-size: 36px;
+  margin-top: 0;
+  color: #0066cc;
+  text-shadow: 2px 2px #f0f0f0;
+  }
+  
+  .subtitle {
+    font-size: 24px;
+    margin-bottom: 30px;
+    color: #666666;
+  }
+  
+  .link {
+    text-decoration: none;
+    color: #0066cc;
+    font-weight: bold;
+    font-size: 18px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    border: 2px solid #0066cc;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+   
+  }
+  
+  .link:hover {
+    color: #ffffff;
+    background-color: #0066cc;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .homeWrap {
+      padding: 10px;
+    }
+    .title {
+      font-size: 28px;
+    }
+    .subtitle {
+      font-size: 20px;
+    }
+  }
+
+  @media only screen and (max-width: 400px) {
+    .title {
+      font-size: 24px;
+    }
+    .subtitle {
+      font-size: 18px;
+    }
+    a {
+      font-size: 16px;
+    }
   }
